--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
    <script defer data-domain="eaturcheese.com" src="https://analytics.acorns.phillprice.com/js/script.js"></script>
   </head>
-  <body style="background: url('cheese.jpg');background-repeat: no-repeat;background-size:cover';color:white;">
+  <body style="background: url('cheese.jpg');background-repeat: no-repeat;background-size: contain;color:white;background-color: black;">
     Photo by <a href="https://unsplash.com/@wyron?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Wyron A</a> on <a href="https://unsplash.com/photos/tmU_LuQoCzk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
   </body>
 </html>
